Implement yarn_run rule

--- a/frontend/BUILD
+++ b/frontend/BUILD
@@ -1,14 +1,7 @@
 subinclude('//tools/yarn-helpers:rules.build_defs')
 
-yarn_run_bin(
+yarn_run(
     name = 'build',
-    bin = 'rollup',
-    args = ['-c'],
     srcs = glob(['**'], hidden=True),
     outs = ["dist"]
-)
-
-filegroup(
-    name = 'files',
-    srcs = glob(['*'])
 )
